update with final sample

--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -417,7 +417,12 @@ p_graph <- tidygraph::tbl_graph(nodes = nodes, edges = edges) |>
 p_graph
 ```
 
-## Comparison with MAIA
+## Omega
+
+```{r, message=FALSE, warning=FALSE}
+semTools::compRelSEM(cfa4h)
+```
+
 
 ```{r, message=FALSE, warning=FALSE}
 scores <- as.data.frame(predict(cfa4h))
@@ -425,7 +430,8 @@ scores$Participant <- df3$Participant
 write.csv(scores, "data/IASR_scores.csv", row.names = FALSE)
 ```
 
-# Study 3
+
+## Comparison with MAIA
 
 ```{r, message=FALSE, warning=FALSE}
 df <- read.csv("../IllusionGameReliability/data/preprocessed_questionnaires.csv") |> 
@@ -436,14 +442,7 @@ df$Average <- rowMeans(select(df, starts_with("Item_IAS")))
 
 vars <- c("Homeostasis", "Skin", "Elimination", "Muscle", "Interoception")
 
-# correlation(df[vars], select(df, starts_with("Item_IAS"))) |> 
-#   summary() |> 
-#   plot()
-```
 
-## Personality
-
-```{r, message=FALSE, warning=FALSE}
 make_correlation <- function(x, y) {
   set.seed(3)
   cor <- correlation::correlation(
@@ -477,6 +476,35 @@ make_correlation <- function(x, y) {
   list(data = cor, print = to_print)
 }
 
+maia <- make_correlation(df[vars], select(df, starts_with("MAIA_"))) 
+export_table(maia$print)
+
+maia$data |> 
+  arrange(Parameter2) |> 
+  tidygraph::as_tbl_graph() |> 
+  mutate(Type = ifelse(str_detect(name, "MAIA_"), "MAIA", "IAS")) |> 
+  tidygraph::activate("edges") |> 
+  filter(BF > 10) |> 
+  ggraph(layout = 'stress', weight=rho) + 
+  # geom_edge_arc(aes(edge_width = rho),
+  #               strength=0) +
+  geom_edge_link(aes(edge_alpha = after_stat(index), edge_width = rho), 
+                 edge_colour = "black") +
+  geom_node_point(aes(color = Type)) +
+  geom_node_text(aes(label=name)) +
+  scale_edge_width_continuous(range = c(0.1, 3)) +
+  coord_fixed() +
+  theme_graph()
+```
+
+
+# Study 3
+
+
+
+## Personality
+
+```{r, message=FALSE, warning=FALSE}
 ipip <- make_correlation(df[vars], select(df, starts_with("IPIP6_"))) 
 export_table(ipip$print)
 
@@ -513,32 +541,56 @@ export_table(sex$print)
 
 ```{r, message=FALSE, warning=FALSE}
 p_cor <- rbind(
+  mutate(maia$data, Domain = "MAIA"),
   mutate(ipip$data, Domain = "Normal Personality"),
   mutate(pid$data, Domain = "Maladaptive Personality"),
   mutate(asq$data, Domain = "Autistic Traits"),
   mutate(spq$data, Domain = "Schizotypic Traits"),
-  mutate(phq$data, Domain = "Mood Disorders"),
+  mutate(phq$data, Domain = "Mood"),
   mutate(gcbs$data, Domain = "Conspiracy Beliefs")
   # mutate(age$data, Domain = "Demographic"),
   # mutate(sex$data, Domain = "Demographic")
 ) |> 
   mutate(alpha = ifelse(BF >= 10, "BF >= 10", "BF < 10"),
          Parameter1 = fct_relevel(Parameter1, "Interoception", "Muscle", "Homeostasis", "Elimination", "Skin"),
-         Domain = fct_relevel(Domain, "Normal Personality", "Maladaptive Personality", "Autistic Traits", "Schizotypic Traits"),
-         Parameter2 = str_remove_all(Parameter2, "IPIP6_|PID5_|ASQ_|SPQ_|GCBS_"),
+         Domain = fct_relevel(Domain, "MAIA", "Normal Personality", "Maladaptive Personality", "Autistic Traits", "Schizotypic Traits"),
+         Parameter2 = str_remove_all(Parameter2, "MAIA_|IPIP6_|PID5_|ASQ_|SPQ_|GCBS_|PHQ4_"),
          Parameter2 = str_replace(Parameter2, "Sex", "Sex (Female vs. Male)"),
          Parameter2 = str_replace(Parameter2, "HonestyHumility", "Honesty-Humility"),
+         Parameter2 = str_replace(Parameter2, "AttentionRegulation", "Attention Regulation"),
+         Parameter2 = str_replace(Parameter2, "EmotionalAwareness", "Emotional Awareness"),
+         Parameter2 = str_replace(Parameter2, "SelfRegulation", "Self-Regulation"),
+         Parameter2 = str_replace(Parameter2, "BodyListening", "Body Listening"),
+         Parameter2 = str_replace(Parameter2, "NotWorrying", "Not Worrying"),
+         Parameter2 = str_replace(Parameter2, "NotDistracting", "Not Distracting"),
+         Parameter2 = str_replace(Parameter2, "NegativeAffect", "Negative Affect"),
+         Parameter2 = str_replace(Parameter2, "Patterns", "Patterns and Numbers"),
+         Parameter2 = str_replace(Parameter2, "Routine", "Routines"),
+         Parameter2 = str_replace(Parameter2, "LackSocialSkills", "Lack of Social Skills"),
+         Parameter2 = str_replace(Parameter2, "LowAttentionalSwitching", "Low Attentional Switching"),
+         Parameter2 = str_replace(Parameter2, "MagicalThinking", "Magical Thinking"),
+         Parameter2 = str_replace(Parameter2, "UnusualPerceptions", "Unusual Perceptions"),
+         Parameter2 = str_replace(Parameter2, "OddSpeech", "Odd Speech"),
+         Parameter2 = str_replace(Parameter2, "ConstrictedAffect", "Constricted Affect"),
+         Parameter2 = str_replace(Parameter2, "SocialAnxiety", "Social Anxiety"),
+         Parameter2 = str_replace(Parameter2, "NoCloseFriends", "No Close Friends"),
+         Parameter2 = str_replace(Parameter2, "GlobalConspiracies", "Global Conspiracies"),
+         Parameter2 = str_replace(Parameter2, "PersonalWellbeing", "Personal Wellbeing"),
+         Parameter2 = str_replace(Parameter2, "InformationControl", "Information Control"),
+         Parameter2 = str_replace(Parameter2, "GovernmentMalfeasance", "Government Malfeasance"),
+         Parameter2 = fct_reorder(Parameter2, rho),
          color = as.character(sign(rho))) |>
+  filter(Parameter2 != "Total") |> 
   ggplot(aes(x = rho, y = Parameter2)) +
   geom_bar(aes(alpha = alpha, fill = rho), stat = "identity") +
   geom_linerange(aes(alpha = alpha, xmin = CI_low, xmax = CI_high, color = color)) +
   geom_vline(xintercept = 0) +
   facet_grid(Domain~Parameter1, scales="free_y", switch ="y") +
   scale_alpha_manual(values = c(0.2, 1)) +
-  scale_fill_gradient2(low = "#2196F3", high = "#FF5722", limits = c(-0.25, 0.25)) +
+  scale_fill_gradient2(low = "#2196F3", high = "#FF5722", limits = c(-0.4, 0.4)) +
   scale_colour_manual(values = c("#2196F3", "#FF5722")) +
-  scale_x_continuous(expand = c(0, 0)) +
-  coord_cartesian(xlim = c(-0.3, 0.3)) +
+  scale_x_continuous(expand = c(0, 0), breaks = c(-0.3, 0, 0.3)) +
+  coord_cartesian(xlim = c(-0.45, 0.45)) +
   labs(title = "Correlates of IAS-R Dimensions") +
   guides(alpha = "none", fill = "none", color="none") +
   theme_minimal() +
@@ -549,7 +601,8 @@ p_cor <- rbind(
         axis.title.x = element_blank(),
         strip.placement.y = "outside",
         strip.background.x = element_rect(fill = "#E0E0E0", color = "white"),
-        strip.text = element_text(face = "bold", size = rel(1)))
+        strip.text.x = element_text(face = "bold", size = rel(1.1)),
+        strip.text.y = element_text(face = "bold", size = rel(0.95)))
 p_cor
 ```
 
