--- a/paper/1_Initial/manuscript.Rmd
+++ b/paper/1_Initial/manuscript.Rmd
@@ -146,6 +146,8 @@ Correlations with the IPIP6 personality scale highlighted a positive relationshi
 ## Summary
 
 
+# Study 3 - Replication and Convergent Validity
+
 
 
 # General Discussion
